<resources>
    <string name="app_name">TrioFit</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name = "open"> Open </string>
    <string name = "close"> Close </string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_bmiInformation">BMI Information</string>
    <string name="menu_caloriesTracker">Calories Tracker</string>
    <string name="menu_video">Workout Videos</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="login_now">Login Now</string>
    <string name="have_an_account">Have an account?</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="weight">Weight (KG)</string>
    <string name="height">Height (M)</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an account?</string>
    <string name="register_now">Register Now</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_password">Change Password</string>
    <string name="others_snacks">Others/Snacks</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="update">Update</string>
    <string name="input_your_calories_intake_for_today_update_your_calories_intake_for_today">Input your calories intake for today, update your calories intake for today</string>
    <string name="search_date">Search Date</string>
    <string name="textview">TextView</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="search">Search</string>
    <string name="search_for_the_calories_consumption_of_the_specific_date">Search for the calories consumption of the specific date</string>
</resources>