<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_gallery2"
        android:name="sg.edu.triofit.ui.gallery.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_gallery3"
        android:name="sg.edu.triofit.ui.gallery.GalleryFragment"
        android:label="@string/menu_bmiInformation"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_gallery4"
        android:name="sg.edu.triofit.ui.gallery.GalleryFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow2"
        android:name="sg.edu.triofit.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_caloriesTracker"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_home"
        android:name="sg.edu.triofit.ui.home.HomeFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="sg.edu.triofit.ui.gallery.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="sg.edu.triofit.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
</navigation>