<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".EditProfile">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileBack7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/back"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/changeImg"
                android:layout_width="152dp"
                android:layout_height="53dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/custom_buttom"
                android:text="@string/change_photo"
                app:backgroundTint="?colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_ChangePassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateBtn" />

            <Button
                android:id="@+id/btn_ChangePassword"
                android:layout_width="152dp"
                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/custom_buttom"
                android:text="@string/change_password"
                app:backgroundTint="?colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/changeImg"
                app:layout_constraintTop_toBottomOf="@+id/updateBtn" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_buttom"
                android:text="@string/update"
                app:backgroundTint="?colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editAge" />

            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ages"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="textPersonName"
                android:textColorHint="?colorPrimaryVariant"
                android:textColor="@color/black"
                android:drawableTint="?colorPrimaryVariant"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editWeight"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editHeight"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/height"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/height"
                android:textColorHint="?colorPrimaryVariant"
                android:textColor="@color/black"
                android:drawableTint="?colorPrimaryVariant"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:textColorHint="?colorPrimaryVariant"
                android:textColor="@color/black"
                android:drawableTint="?colorPrimaryVariant"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPfp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:textColorHint="?colorPrimaryVariant"
                android:textColor="@color/black"
                android:drawableTint="?colorPrimaryVariant"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editNumber"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/weight"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/weight"
                android:textColorHint="?colorPrimaryVariant"
                android:textColor="@color/black"
                android:drawableTint="?colorPrimaryVariant"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editHeight"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/editPfp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>